--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,7 @@
 }
 
 .container {
-    margin-left: 20px;
-    margin-right: 50px;
+    margin: 0 50px 0 20px;
     max-width: 992px;
 }
 
@@ -28,8 +27,7 @@ body {
     text-align: center;
     font-size: 48px;
     padding-left: 14px;
-    margin-top: 45px;
-    margin-bottom: 0;
+    margin: 45px 0 0 0;
 }
 
 h2 {
@@ -37,15 +35,12 @@ h2 {
     font-size: 24px;
     font-weight: bold;
     padding: 0;
-    margin-right: 40px;
-    margin-top: 31px;
-    margin-bottom: 30px;
+    margin: 31px 40px 30px 0;
 }
 
 .col-md-7 {
     width: 558px;
-    padding-right: 8px;
-    padding-left: 15px;
+    padding: 0 8px 0 15px;
 }
 
 .col-md-5 {
@@ -55,13 +50,8 @@ h2 {
 
 .sidebox {
     border: 1px solid #ccc;
-    margin-top: 30px;
-    margin-right: 0;
-    margin-left: 7px;
-    margin-bottom: 10px;
-    padding-top: 0;
-    padding-left: 30px;
-    padding-bottom: 25px;
+    margin: 30px 0 10px 7px;
+    padding: 0 0 25px 30px;
     height: 226px;
 }
 
